<resources>
    <string name="app_name">Here Live Wallpaper</string>

    <string-array name="map_types_bing">
        <item>Road</item>
        <item>Aerial</item>
        <item>Road and aerial</item>
    </string-array>
    <string-array name="map_types_mapbox">
        <item>Streets</item>
        <item>Outdoors</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Satellite</item>
        <item>Satellite and streets</item>
        <item>Traffic (day)</item>
        <item>Traffic (night)</item>
    </string-array>
    <string name="banner_ad_unit_id">ca-app-pub-5575410163176914/5178006785</string>
    <string name="zoom_text">Zoom</string>
    <string name="map_type_text">Map type</string>
    <string name="refresh_rate_text">Refresh rate</string>
    <string name="displacement_text">Displacement</string>
    <string name="prompt_text">Tap here to launch the wallpaper</string>
    <string name="update_text">Update</string>
    <string name="picasso_license">
        <![CDATA[Copyright 2013 Square, Inc. <br /><br /> Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at <br /><br /> <a href=http://www.apache.org/licenses/LICENSE-2.0>http://www.apache.org/licenses/LICENSE-2.0</a> <br /><br /> Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="expandable_license">
        <![CDATA[Copyright (C) 2015 A.Akira<br /><br />Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at<br /><br /> <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a> <br /><br /> Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="asl_license">
        <![CDATA[Copyright (C) 2011 The Android Open Source Project<br /><br /> Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at <br /><br /> <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a> <br /><br /> Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="mapbox_license">
        <![CDATA[© <a href="https://www.mapbox.com/about/maps/">Mapbox</a> <br /> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> <br /><strong><a href="https://www.mapbox.com/feedback/" target="_blank">Improve this map</a></strong>]]></string>

</resources>
