<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:ads="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="pl.czerniak.kamil.herelivewallpaper.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:ignore="UnusedAttribute"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/refresh_rate_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/refresh_rate"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
            android:id="@+id/refresh_rate"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/map_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/map_type_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/map_type"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
            android:id="@+id/map_type"
            style="?attr/editTextStyle"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="28dp"
            android:entries="@array/map_types_mapbox"
            app:layout_constraintBottom_toTopOf="@+id/zoom"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:id="@+id/zoom"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/displacement"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:id="@+id/displacement"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="101dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/zoom_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/zoom"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_text"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/activityButton"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/activityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:onClick="onClick"
            android:text="@string/update_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/displacement_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/displacement"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
